Open packages java.lang and java.util