@@ -45,7 +45,10 @@ tasks.withType(Jar) {
 
 jar {
     manifest {
-        attributes "Main-Class": "i5.las2peer.tools.L2pNodeLauncher"
+        attributes(
+            "Main-Class": "i5.las2peer.tools.L2pNodeLauncher",
+            "Add-Opens": "java.base/java.lang java.base/java.util"
+        )
     }
 }
 
